<resources>
    <string name="app_name">Ecommerce Concept</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="temporary_empty_fragment">Temporary empty fragment</string>
    <string name="hello_splash">Ecommerce Concept</string>
    <string name="currency">$</string>

    <!--menus-->
    <string name="filters">filters</string>

    <!--bottom navigation-->
    <string name="bottom_nav_explorer">Explorer</string>
    <string name="bottom_nav_cart">Cart</string>
    <string name="bottom_nav_favorites">Favorites</string>
    <string name="bottom_nav_profile">Profile</string>

    <!--MainScreenFragment-->
    <string name="categories">Select Category</string>
    <string name="hot_sales">Hot sales</string>
    <string name="best_seller">Best Seller</string>
    <string name="full_list">see more</string>
    <string name="show_all_categories">view all</string>
    <string name="first_category">Phones</string>
    <string name="second_category">Computers</string>
    <string name="third_category">Health</string>
    <string name="fourth_category">Books</string>
    <string name="fifth_category">Something</string>

    <!--HotSalesCard-->
    <string name="is_new">New</string>
    <string name="tu_buy">Buy now!</string>

    <!--BottomSheetFilterTitles-->
    <string name="bottom_sheet_title">Filter options</string>
    <string name="filter_brand">Brand</string>
    <string name="filter_price">Price</string>
    <string name="filter_size">Size</string>
    <string name="done">Done</string>

    <!--    CartFragment-->
    <string name="cart_title">My Cart</string>
    <string name="cart_title_total">Total</string>
    <string name="cart_title_delivery">Delivery</string>
    <string name="cart_count_total">1000$</string>
    <string name="cart_default_delivery">Free</string>
    <string name="cart_count_delivery">50$</string>
    <string name="cart_add_address">Add address</string>
    <string name="checkout_button">Checkout</string>

    <!--    ProductDetailFragment-->
    <string name="product_detail_title">Product Details</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="tabShop">Shop</string>
    <string name="tabDetails">Details</string>
    <string name="tabFeatures">Features</string>
    <string name="select_details">Select color and capacity</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>