<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/shadow_white"
    android:orientation="vertical"
    tools:context=".MyCartFragment">

    <include
        android:id="@+id/toolBar"
        layout="@layout/toolbar_cart"/>

    <TextView
        style="@style/CartTitle.F34.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cart_title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape_rounded_top_corners"
        android:backgroundTint="@color/dark_blue"
        android:paddingBottom="@dimen/bottom_nav_height">

        <Button
            android:id="@+id/button"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_rounded_corners_button_light"
            android:text="Button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <View
            android:id="@+id/divider1"
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="90dp"
            android:background="#23FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginTop="15dp"
            android:text="@string/cart_title_total"
            style="@style/SubtotalTitles.F34.TextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/cart_title_delivery"
            style="@style/SubtotalTitles.F34.TextView"
            app:layout_constraintStart_toStartOf="@id/total"
            app:layout_constraintTop_toBottomOf="@id/total" />

        <TextView
            android:id="@+id/cart_summaty_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="35dp"
            android:text="@string/cart_count_total"
            style="@style/SubtotalCount.F34.TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider1" />

        <TextView
            android:id="@+id/cart_delivery_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/cart_default_delivery"
            style="@style/SubtotalCount.F34.TextView"
            app:layout_constraintStart_toStartOf="@+id/cart_summaty_cost"
            app:layout_constraintTop_toBottomOf="@+id/cart_summaty_cost" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="125dp"
            android:background="#23FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cart_recycler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            tools:listitem="@layout/one_item_cart"
            android:layout_marginTop="40dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/divider1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>